--- a/test/src/main/java/uks/fulibgen/shop/Storage/classModel.yaml
+++ b/test/src/main/java/uks/fulibgen/shop/Storage/classModel.yaml
@@ -238,7 +238,8 @@ publish(event);"
   methodBody: 	"StringBuilder html = new StringBuilder();
 String id = request.params(\"id\");
 
-html.append(\"This is the Shop Service page \" + id);
+
+html.append(\"This is the Shop Service page \" + id + \"\n\");
 return html.toString();"
   modified: 	false
   modifiers: 	public
