--- a/test/src/test/java/uks/fulibgen/shop/classModel.yaml
+++ b/test/src/test/java/uks/fulibgen/shop/classModel.yaml
@@ -95,13 +95,28 @@ pre.shouldHave(text(\"- box23:\"));
 pre.shouldHave(text(\"product: shoes\"));
 pre.shouldHave(text(\"place: shelf23\"));
 
+// page 12:50
+open(\"http://localhost:42100/page/12_50\");
+$(\"#shoes\").click();
+
+// create ShopShoesSelected: Shop shoes selected 12:51
+ShopShoesSelected e1251 = new ShopShoesSelected();
+e1251.setId(\"12:51\");
+publish(e1251);
+open(\"http://localhost:42000\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 12_51:\"));
+
+// page 13:00
+open(\"http://localhost:42100/page/13_00\");
+$(\"#product\").setValue(\"shoes\");
+$(\"#name\").setValue(\"Alice\");
+$(\"#address\").setValue(\"Wonderland 1\");
+$(\"#OK\").click();
+
 // create OrderRegistered: order registered 13:01
 OrderRegistered e1301 = new OrderRegistered();
 e1301.setId(\"13:01\");
-e1301.setTrigger(\"button OK\");
-e1301.setProduct(\"shoes\");
-e1301.setCustomer(\"Alice\");
-e1301.setAddress(\"Wonderland 1\");
 publish(e1301);
 open(\"http://localhost:42000\");
 pre = $(\"#history\");
