--- a/test/src/main/java/uks/debuggen/page/Shop/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/page/Shop/classModel.yaml
@@ -194,6 +194,36 @@ publish(event);"
   id: 	ShopService_getPage
   methodBody: 	"StringBuilder html = new StringBuilder();
 String id = request.params(\"id\");
+String event = request.queryParams(\"event\");
+
+if (\"product selected 12:51\".equals(event)) {
+
+   // create ProductSelected: product selected 12:51
+   ProductSelected e1251 = new ProductSelected();
+   e1251.setId(\"12:51\");
+   publish(e1251);
+}
+
+if (\"order registered 13:00\".equals(event)) {
+
+   // create OrderRegistered: order registered 13:00
+   OrderRegistered e1300 = new OrderRegistered();
+   e1300.setId(\"13:00\");
+   e1300.setCount(request.queryParams(\"count\"));
+   e1300.setName(request.queryParams(\"name\"));
+   e1300.setAddress(request.queryParams(\"address\"));
+   publish(e1300);
+}
+
+if (\"product selected 13:10\".equals(event)) {
+
+   // create ProductSelected: product selected 13:10
+   ProductSelected e1310 = new ProductSelected();
+   e1310.setId(\"13:10\");
+   publish(e1310);
+}
+
+
 
 // 12:50
 if (id.equals(\"12_50\")) {
@@ -201,7 +231,7 @@ if (id.equals(\"12_50\")) {
    // Shop 12:50
    html.append(\"   <p>Welcome to the event shop</p>\n\");
    html.append(\"   <p>What do you want?</p>\n\");
-   html.append(\"   <p><input id=\\"event\\" name=\\"event\\" type=\\"hidden\\" value=\\"Shop shoes selected 12:51\\"></p>\n\");
+   html.append(\"   <p><input id=\\"event\\" name=\\"event\\" type=\\"hidden\\" value=\\"product selected 12:51\\"></p>\n\");
    html.append(\"   <p><input id=\\"shoes\\" name=\\"button\\" type=\\"submit\\" value=\\"shoes\\"></p>\n\");
    html.append(\"   <p><input id=\\"tshirt\\" name=\\"button\\" type=\\"submit\\" value=\\"tshirt\\"></p>\n\");
    html.append(\"</form>\n\");
@@ -230,7 +260,7 @@ if (id.equals(\"13_07\")) {
    html.append(\"   <p>order1300 shoes is pending</p>\n\");
    html.append(\"   <p>What else do you want</p>\n\");
    html.append(\"   <p><input id=\\"shoes\\" name=\\"button\\" type=\\"submit\\" value=\\"shoes\\"></p>\n\");
-   html.append(\"   <p><input id=\\"event\\" name=\\"event\\" type=\\"hidden\\" value=\\"Shop tshirt selected 13:10\\"></p>\n\");
+   html.append(\"   <p><input id=\\"event\\" name=\\"event\\" type=\\"hidden\\" value=\\"product selected 13:10\\"></p>\n\");
    html.append(\"   <p><input id=\\"tshirt\\" name=\\"button\\" type=\\"submit\\" value=\\"tshirt\\"></p>\n\");
    html.append(\"</form>\n\");
    return html.toString();
