--- a/test/src/main/java/uks/fulibgen/shop/Storage/classModel.yaml
+++ b/test/src/main/java/uks/fulibgen/shop/Storage/classModel.yaml
@@ -237,6 +237,8 @@ publish(event);"
   id: 	StorageService_getPage
   methodBody: 	"StringBuilder html = new StringBuilder();
 String id = request.params(\"id\");
+String event = request.queryParams(\"event\");
+
 
 
 html.append(\"This is the Shop Service page \" + id + \"\n\");
