Combined test for code gen and html gen

--- a/test/src/main/java/uks/debuggen/shop/Shop/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/shop/Shop/classModel.yaml
@@ -237,8 +237,59 @@ publish(event);"
   id: 	ShopService_getPage
   methodBody: 	"StringBuilder html = new StringBuilder();
 String id = request.params(\"id\");
+String event = request.queryParams(\"event\");
 
-html.append(\"This is the Shop Service page \" + id);
+if (\"Shop shoes selected 12:51\".equals(event)) {
+
+   // create ShopShoesSelected: Shop shoes selected 12:51
+   ShopShoesSelected e1251 = new ShopShoesSelected();
+   e1251.setId(\"12:51\");
+   publish(e1251);
+}
+
+if (\"order registered 13:01\".equals(event)) {
+
+   // create OrderRegistered: order registered 13:01
+   OrderRegistered e1301 = new OrderRegistered();
+   e1301.setId(\"13:01\");
+   e1301.setProduct(request.queryParams(\"product\"));
+   e1301.setName(request.queryParams(\"name\"));
+   e1301.setAddress(request.queryParams(\"address\"));
+   publish(e1301);
+}
+
+
+
+// 12:50
+if (id.equals(\"12_50\")) {
+   html.append(\"<form action=\\"/page/13_00\\" method=\\"get\\">\n\");
+   // Shop 12:50
+   html.append(\"   <p>Welcome to the event shop</p>\n\");
+   html.append(\"   <p>What do you want?</p>\n\");
+   html.append(\"   <p><input id=\\"event\\" name=\\"event\\" type=\\"hidden\\" value=\\"Shop shoes selected 12:51\\"></p>\n\");
+   html.append(\"   <p><input id=\\"shoes\\" name=\\"button\\" type=\\"submit\\" value=\\"shoes\\"></p>\n\");
+   html.append(\"   <p><input id=\\"tshirt\\" name=\\"button\\" type=\\"submit\\" value=\\"tshirt\\"></p>\n\");
+   html.append(\"</form>\n\");
+   return html.toString();
+}
+
+// 13:00
+if (id.equals(\"13_00\")) {
+   html.append(\"<form action=\\"/page/next_page\\" method=\\"get\\">\n\");
+   // Shop 13:00
+   html.append(\"   <p>welcome to the shop</p>\n\");
+   html.append(\"   <p><input id=\\"product\\" name=\\"product\\" placeholder=\\"product?\\"></p>\n\");
+   html.append(\"   <p><input id=\\"name\\" name=\\"name\\" placeholder=\\"name?\\"></p>\n\");
+   html.append(\"   <p><input id=\\"address\\" name=\\"address\\" placeholder=\\"address?\\"></p>\n\");
+   html.append(\"   <p><input id=\\"event\\" name=\\"event\\" type=\\"hidden\\" value=\\"order registered 13:01\\"></p>\n\");
+   html.append(\"   <p><input id=\\"OK\\" name=\\"button\\" type=\\"submit\\" value=\\"OK\\"></p>\n\");
+   html.append(\"</form>\n\");
+   return html.toString();
+}
+
+
+
+html.append(\"This is the Shop Service page \" + id + \"\n\");
 return html.toString();"
   modified: 	false
   modifiers: 	public
@@ -262,7 +313,7 @@ if (event.getId().equals(\"13:01\")) {
    order1300.setState(\"pending\");
 
    Customer alice = model.getOrCreateCustomer(\"Alice\");
-   alice.setOrders(\"[order1300]\");
+   alice.setOrders(\"[ order1300 ]\");
 }
 if (event.getId().equals(\"13:11\")) {
 
@@ -273,7 +324,7 @@ if (event.getId().equals(\"13:11\")) {
    order1310.setState(\"pending\");
 
    Customer alice = model.getOrCreateCustomer(\"Alice\");
-   alice.setOrders(\"[order1300 order1310]\");
+   alice.setOrders(\"[ order1300 order1310 ]\");
 }
 "
   modified: 	false
