--- a/test/src/test/java/uks/debuggen/shop/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/shop/classModel.yaml
@@ -71,6 +71,7 @@ e1200.setBox(\"box23\");
 e1200.setProduct(\"shoes\");
 e1200.setPlace(\"shelf23\");
 publish(e1200);
+
 open(\"http://localhost:42000\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 12_00:\"));
@@ -95,14 +96,21 @@ pre.shouldHave(text(\"- box23:\"));
 pre.shouldHave(text(\"product: shoes\"));
 pre.shouldHave(text(\"place: shelf23\"));
 
-// create OrderRegistered: order registered 13:01
-OrderRegistered e1301 = new OrderRegistered();
-e1301.setId(\"13:01\");
-e1301.setTrigger(\"button OK\");
-e1301.setProduct(\"shoes\");
-e1301.setCustomer(\"Alice\");
-e1301.setAddress(\"Wonderland 1\");
-publish(e1301);
+// page 12:50
+open(\"http://localhost:42100/page/12_50\");
+$(\"#shoes\").click();
+
+open(\"http://localhost:42000\");
+pre = $(\"#history\");
+pre.shouldHave(text(\"- 12_51:\"));
+
+// page 13:00
+open(\"http://localhost:42100/page/13_00\");
+$(\"#product\").setValue(\"shoes\");
+$(\"#name\").setValue(\"Alice\");
+$(\"#address\").setValue(\"Wonderland 1\");
+$(\"#OK\").click();
+
 open(\"http://localhost:42000\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 13_01:\"));
@@ -136,6 +144,7 @@ e1400.setPickTask(\"pick1300\");
 e1400.setBox(\"box23\");
 e1400.setUser(\"Bob\");
 publish(e1400);
+
 open(\"http://localhost:42000\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 14_00:\"));
@@ -172,6 +181,7 @@ e1311.setProduct(\"tshirt\");
 e1311.setCustomer(\"Alice\");
 e1311.setAddress(\"Wonderland 1\");
 publish(e1311);
+
 open(\"http://localhost:42000\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 13_11:\"));
