--- a/test/src/main/java/uks/debuggen/shop/someservice/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/shop/someservice/classModel.yaml
@@ -216,8 +216,11 @@ publish(event);"
   id: 	someserviceService_getPage
   methodBody: 	"StringBuilder html = new StringBuilder();
 String id = request.params(\"id\");
+String event = request.queryParams(\"event\");
 
-html.append(\"This is the Shop Service page \" + id);
+
+
+html.append(\"This is the Shop Service page \" + id + \"\n\");
 return html.toString();"
   modified: 	false
   modifiers: 	public
